--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "crypto": "0.0.3",
+    "moment": "^2.10.6",
     "underscore": "^1.8.3"
   },
   "devDependencies": {},
